--- a/graduation-form/package.json
+++ b/graduation-form/package.json
@@ -12,6 +12,7 @@
     "graphql": "^16.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-jwt": "^1.1.6",
     "react-scripts": "5.0.1",
     "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
